# lib/api-spec/openapi.yaml
@@ -1578,6 +1578,12 @@ components:
           type: string
         appointmentId:
           type: integer
+        patientId:
+          type: integer
+        procedureId:
+          type: integer
+        procedureName:
+          type: string
         createdAt:
           type: string
           format: date-time
@@ -1601,6 +1607,8 @@ components:
           type: string
         category:
           type: string
+        procedureId:
+          type: integer
       required:
         - amount
         - description
